fix(translation): Fix portuguese translations for deck

--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -1,7 +1,7 @@
 {
   "can_deactivate_guard": {
-    "title": "Advertência: Mazo não salvos!",
-    "message": "Você tem mazo não salvos. Pressione Cancelar para voltar e salvar essas mudanças, ou OK para perder essas mudanças."
+    "title": "Advertência: Baralho não salvos!",
+    "message": "Você tem baralho não salvos. Pressione Cancelar para voltar e salvar essas mudanças, ou OK para perder essas mudanças."
   },
   "changelog": {
     "reload_page": "Se você sente um comportamento estranho, recarregue a página (Ctrl+F5 para Windows/Linux ou Command+Shift+R para MacOS)"
@@ -56,10 +56,10 @@
     "capacity": "Capacidade",
     "clan": "Clãs",
     "group": "Grupo",
-    "deck_popularity": "Popularidade do mazo",
-    "deck_popularity_title": "popularidade baseada em número de mazos que contêm pelo menos um cartão copiado",
+    "deck_popularity": "Popularidade do baralho",
+    "deck_popularity_title": "popularidade baseada em número de baralhos que contêm pelo menos um cartão copiado",
     "card_popularity": "Popularidade do cartão",
-    "card_popularity_title": "popularidade baseada em número de cartões copiados em todos os mazos",
+    "card_popularity_title": "popularidade baseada em número de cartões copiados em todos os baralhos",
     "reset": "Repor",
     "filters": "Filtros",
     "results": "{{ count }} resultados",
@@ -87,9 +87,9 @@
     "players": "{{ count }} jogadores",
     "buy_dtc": "Compre em DriveThruCards",
     "source": "Fonte",
-    "twda": "Arquivo de mazos ganhos do torneio",
+    "twda": "Arquivo de baralhos ganhos do torneio",
     "views": "Visualizações",
-    "rate_deck": "Deixe uma avaliação para esse mazo!",
+    "rate_deck": "Deixe uma avaliação para esse baralho!",
     "votes": "{{ count }} votos",
     "comments": "Comentários",
     "share": "Compartilhar",
@@ -102,54 +102,54 @@
     "total_pool_cost": "Custo total da vida",
     "total_blood_cost": "Custo total de sangue",
     "no_discipline": "Sem disciplina",
-    "rate_failed": "Algo deu errado ao avaliar o mazo",
+    "rate_failed": "Algo deu errado ao avaliar o baralho",
     "rate_success": "Obrigado pela sua avaliação!",
-    "bookmark_error": "Algo deu errado ao adicionar o mazo aos favoritos",
+    "bookmark_error": "Algo deu errado ao adicionar o baralho aos favoritos",
     "link_copied": "Link copiado para a área de transferência",
     "clipboard": "Área de transferência",
     "file": "Arquivo",
-    "deck_copied": "Mazo copiado para a área de transferência",
+    "deck_copied": "Baralho copiado para a área de transferência",
     "export": "Exportar",
     "draw": "Draw",
     "edit": "Editar",
-    "similar_decks": "Mazos Parecidos",
+    "similar_decks": "Baralhos Parecidos",
     "collection_tracker": "Rastreador de Coleção"
   },
   "deck_builder": {
-    "deck_not_exists": "O mazo não existe. Tente novamente mais tarde.",
-    "already_saved": "Mazo já salvo!",
-    "name_required": "O nome do mazo é obrigatório",
-    "invalid_public_deck": "Mazo não público, não é possível compartilhar mazos com cartões privados",
-    "deck_saved": "Mazo salvo com sucesso! Você pode agora compartilhar com seus amigos!",
+    "deck_not_exists": "O baralho não existe. Tente novamente mais tarde.",
+    "already_saved": "Baralho já salvo!",
+    "name_required": "O nome do baralho é obrigatório",
+    "invalid_public_deck": "Baralho não público, não é possível compartilhar baralhos com cartões privados",
+    "deck_saved": "Baralho salvo com sucesso! Você pode agora compartilhar com seus amigos!",
     "link_copied": "Link copiado para a área de transferência",
-    "delete_title": "Eliminar este mazo?",
-    "delete_message": "O mazo será eliminado. O mazo estará disponível por 60 dias após a sua eliminação para poder ser restaurado.",
-    "delete_successful": "Mazo eliminado",
+    "delete_title": "Eliminar este baralho?",
+    "delete_message": "O baralho será eliminado. O baralho estará disponível por 60 dias após a sua eliminação para poder ser restaurado.",
+    "delete_successful": "Baralho eliminado",
     "name": "Nome",
     "description": "Descrição",
-    "description_placeholder": "Explique em poucas linhas como funciona o mazo e o que é o sinergia entre os cartões. Formato de Markdown suportado.",
+    "description_placeholder": "Explique em poucas linhas como funciona o baralho e o que é o sinergia entre os cartões. Formato de Markdown suportado.",
     "import": "Importar",
     "view": "Visualizar",
     "share": "Compartilhar",
     "save": "Salvar",
     "delete": "Eliminar",
-    "published_tooltip": "Faça este mazo público para que outros possam ver e comentar sobre ele",
-    "published": "Mazo público",
+    "published_tooltip": "Faça este baralho público para que outros possam ver e comentar sobre ele",
+    "published": "Baralho público",
     "undo_tooltip": "Desfazer a última mudança",
     "undo": "Desfazer",
     "change_history": "Histórico de mudanças",
     "redo": "Refazer",
     "redo_tooltip": "Refazer a última mudança",
-    "restore_title": "Restaurar mazo?",
+    "restore_title": "Restaurar baralho?",
     "restore_message": "Tem certeza de que deseja restaurar '{{ name }}'?",
-    "restore_successful": "Mazo restaurado",
+    "restore_successful": "Baralho restaurado",
     "clone": "Clonar",
     "draw": "Draw",
     "export": "Exportar",
     "clipboard": "Área de transferência",
     "file": "Arquivo",
     "limited_format": "Formato Limitado",
-    "deck_copied": "Mazo copiado para a área de transferência",
+    "deck_copied": "Baralho copiado para a área de transferência",
     "collection_tracker": "Rastreador de Coleção"
   },
   "deck_builder_service": {
@@ -169,25 +169,25 @@
     "artist": "Artista",
     "where_find": "Onde posso encontrar?",
     "search": "Buscar",
-    "search_title": "Buscar mazo com este cartão",
+    "search_title": "Buscar baralho com este cartão",
     "buy": "Compre este cartão em {{ name }}",
     "previous_card": "Cartão anterior",
     "next_card": "Cartão seguinte",
     "print_on_demand": "Impressão em demanda",
     "promo": "Promo",
-    "private_deck": "Mazo privado",
-    "restore_deck": "Restaurar mazo",
+    "private_deck": "Baralho privado",
+    "restore_deck": "Restaurar baralho",
     "print": "Imprimir",
-    "my_decks": "¿En quais mazos eu uso?",
+    "my_decks": "¿En quais baralhos eu uso?",
     "set_image_not_available": "Imagem de expansão não disponível, usando imagem padrão",
     "my_collection": "Quantas eu possuo?",
     "view_collection": "Ver na Coleção",
     "tracked_collection": "Rastreado na Coleção"
   },
   "decks": {
-    "total_decks": "<strong>{{ total }}</strong> mazos",
+    "total_decks": "<strong>{{ total }}</strong> baralhos",
     "all": "Todos",
-    "my_decks": "Meus mazos",
+    "my_decks": "Meus baralhos",
     "tournament": "Torneio",
     "community": "Comunidade",
     "preconstructed": "Preconstruido",
@@ -266,7 +266,7 @@
   },
   "header": {
     "home": "Início",
-    "decks": "Mazos",
+    "decks": "Baralhos",
     "crypt": "Cripta",
     "library": "Biblioteca",
     "builder": "Editor",
@@ -277,7 +277,7 @@
     "sign_up": "Cadastrar",
     "statistics": "Estatísticas",
     "my_collection": "Minha Coleção",
-    "my_decks": "Meus mazos",
+    "my_decks": "Meus baralhos",
     "bookmarks": "Favoritos",
     "profile_settings": "Configurações de perfil",
     "logout": "Sair",
@@ -288,13 +288,13 @@
   },
   "home": {
     "welcome_title": "Bem-vindo ao VTES Decks",
-    "welcome_subtitle": "Descubra, Compartilhe e Construa os melhores mazos de Vampire: The Eternal Struggle",
-    "tournament_decks": "Mazos de torneio",
-    "community_decks": "Mazos da comunidade",
-    "preconstructed_decks": "Mazos preconstruídos",
-    "deck_builder": "Editor de mazos",
-    "user_decks": "Meus mazos",
-    "bookmarked_decks": "Mazos favoritos",
+    "welcome_subtitle": "Descubra, Compartilhe e Construa os melhores baralhos de Vampire: The Eternal Struggle",
+    "tournament_decks": "Baralhos de torneio",
+    "community_decks": "Baralhos da comunidade",
+    "preconstructed_decks": "Baralhos preconstruídos",
+    "deck_builder": "Editor de baralhos",
+    "user_decks": "Meus baralhos",
+    "bookmarked_decks": "Baralhos favoritos",
     "contribute_title": "Contribuir",
     "contribute_message": "Se você deseja contribuir, reporte bugs ou faça uma questão, você pode fazê-lo através",
     "contribute_github_issues": "GitHub Issues",
@@ -345,10 +345,10 @@
     "relevance": "Relevância",
     "name": "Nome",
     "type": "Tipo",
-    "deck_popularity": "Popularidade do mazo",
-    "deck_popularity_title": "popularidade baseada em número de mazos que contêm pelo menos um cartão copiado",
+    "deck_popularity": "Popularidade do baralho",
+    "deck_popularity_title": "popularidade baseada em número de baralhos que contêm pelo menos um cartão copiado",
     "card_popularity": "Popularidade do cartão",
-    "card_popularity_title": "popularidade baseada em número de cartões copiados em todos os mazos",
+    "card_popularity_title": "popularidade baseada em número de cartões copiados em todos os baralhos",
     "reset": "Repor",
     "filters": "Filtros",
     "results": "{{ count }} resultados",
@@ -764,14 +764,14 @@
     "keep_condition_bulk": "Manter condição atual",
     "keep_language_bulk": "Manter idioma atual",
     "tracker_collection": "Encontrado na Coleção",
-    "tracker_decks": "Necessário para Mazos (Todos)",
-    "tracker_decks_tracked": "Necessário para Mazos (Rastreado)",
-    "add_preconstructed_deck": "Adicionar Mazo Preconstruído",
-    "preconstructed_deck_description": "Selecione um mazo preconstruído para adicionar todas as suas cartas à sua coleção.",
-    "no_preconstructed_decks_found": "Nenhum mazo preconstruído encontrado.",
+    "tracker_decks": "Necessário para Baralhos (Todos)",
+    "tracker_decks_tracked": "Necessário para Baralhos (Rastreado)",
+    "add_preconstructed_deck": "Adicionar Baralho Preconstruído",
+    "preconstructed_deck_description": "Selecione um baralho preconstruído para adicionar todas as suas cartas à sua coleção.",
+    "no_preconstructed_decks_found": "Nenhum baralho preconstruído encontrado.",
     "deck_cards_added_successfully": "{{ cardCount }} cartas de \"{{ deckName }}\" foram adicionadas à sua coleção com sucesso.",
     "number_of_copies": "Número de cópias",
-    "total_decks": "{{ total }} mazos encontrados",
+    "total_decks": "{{ total }} baralhos encontrados",
     "cards": "cartas"
   }
 }
