feat(admin) add admin edit option and improve tag filtering

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -112,6 +112,7 @@
     "export": "Export",
     "draw": "Draw",
     "edit": "Edit",
+    "edit_as_admin": "Edit (as Admin)",
     "similar_decks": "Similar Decks",
     "collection_tracker": "Collection Tracker"
   },
