--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -112,6 +112,7 @@
     "export": "Exportar",
     "draw": "Draw",
     "edit": "Editar",
+    "edit_as_admin": "Editar (como Admin)",
     "related_decks": "Mazos Similares",
     "collection_tracker": "Rastreador de Colección"
   },
