Enhance Crypt and Library filters with release dates, and update clan names and icons to V5 standards.

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -539,8 +539,8 @@
       "abo": "Abomination",
       "ahrimanes": "Ahrimane",
       "akunanse": "Akunanse",
-      "assamite": "Assamita",
       "baali": "Baali",
+      "banuhaqim": "Banu Haqim",
       "bloodbrothers": "Hermanos de Sangre",
       "brujah": "Brujah",
       "brujahanti": "Brujah antitribu",
@@ -558,6 +558,7 @@
       "lasombra": "Lasombra",
       "malkavian": "Malkavian",
       "malkaviananti": "Malkavian antitribu",
+      "ministry": "Ministry",
       "nagaraja": "Nagaraja",
       "nosferatu": "Nosferatu",
       "nosferatuanti": "Nosferatu antitribu",
