--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -541,14 +541,13 @@
       "abo": "Abomination",
       "ahrimanes": "Ahrimane",
       "akunanse": "Akunanse",
-      "assamite": "Assamite",
       "baali": "Baali",
+      "banuhaqim": "Banu Haqim",
       "bloodbrothers": "Blood Brother",
       "brujah": "Brujah",
       "brujahanti": "Brujah antitribu",
       "caitiff": "Caitiff",
       "daughters": "Daughter of Cacophony",
-      "fos": "Follower of Set",
       "gangrel": "Gangrel",
       "gangrelanti": "Gangrel antitribu",
       "gargoyle": "Gargoyle",
@@ -560,6 +559,7 @@
       "lasombra": "Lasombra",
       "malkavian": "Malkavian",
       "malkaviananti": "Malkavian antitribu",
+      "ministry": "Ministry",
       "nagaraja": "Nagaraja",
       "nosferatu": "Nosferatu",
       "nosferatuanti": "Nosferatu antitribu",
