Fixed an issue that caused duplicate decks to appear when scrolling on slow network connections.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -204,7 +204,8 @@
     "clear_filters": "Clear Filters",
     "back_to_top": "Back to top",
     "filters": "Filters",
-    "show_filters": "Show filters"
+    "show_filters": "Show filters",
+    "show_more": "Show more"
   },
   "draw_cards": {
     "title": "Draw Cards",
