--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -204,7 +204,8 @@
     "clear_filters": "Repor filtros",
     "back_to_top": "Voltar ao topo",
     "filters": "Filtros",
-    "show_filters": "Mostrar filtros"
+    "show_filters": "Mostrar filtros",
+    "show_more": "Ver mais"
   },
   "draw_cards": {
     "title": "Comprar Cartas",
