feat: Add apply button to modal footers in various components and update translations

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -415,7 +415,9 @@
     "new_version_installing": "Good news! An update is being installed in the background.",
     "not_required": "Not Required",
     "grid": "Grid",
-    "list": "List"
+    "list": "List",
+    "cards": "cards",
+    "apply": "Apply"
   },
   "table_seating": {
     "title": "Table Seating",
