feat: Implement grid layout for Crypt and Library cards (#88)
* feat: Implement grid layout for Crypt and Library cards

- Added new components for displaying Crypt and Library cards in a grid format.
- Introduced lazy loading for images to enhance performance.
- Updated existing components to support the new grid layout.
- Enhanced user interface with hover effects for draw probability and collection badges.
- Added toggle functionality for switching between list and grid views.
- Improved localization with new translations for grid and list options.
- Included new card back images for Crypt and Library cards.
- Minor fixes and performance improvements across the application.

* fix: Adjust error message alignment in Crypt and Library sections

* feat: Enhance library list display with icons and size information

* feat: Add font size utility class and update badge styles in Crypt and Library components

* feat: Add dynamic shadow effect to card images and adjust button styles in Crypt and Library components

* feat: Add apply button to modal footers in various components and update translations

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -413,7 +413,11 @@
     "validation_error": "Validation error. Please check the form and try again.",
     "new_version_available": "A new version of the app is loading. Please wait a few seconds or press Ctrl + F5 to refresh.",
     "new_version_installing": "Good news! An update is being installed in the background.",
-    "not_required": "Not Required"
+    "not_required": "Not Required",
+    "grid": "Grid",
+    "list": "List",
+    "cards": "cards",
+    "apply": "Apply"
   },
   "table_seating": {
     "title": "Table Seating",
@@ -537,7 +541,8 @@
       "martyrdom": "Martyrdom",
       "redemption": "Redemption",
       "vengeance": "Vengeance",
-      "vision": "Vision"
+      "vision": "Vision",
+      "flight": "Flight"
     },
     "clan": {
       "abo": "Abomination",
@@ -603,7 +608,10 @@
       "rush": "rush",
       "stealth": "stealth",
       "swarm": "swarm",
-      "vote": "vote"
+      "vote": "vote",
+      "mmpa": "mmpa",
+      "v5": "v5",
+      "2player": "2player"
     },
     "taints": {
       "+Intercept": "+Intercept",
@@ -645,7 +653,8 @@
       "Sterile": "Sterile",
       "Scarce": "Scarce",
       "Blood Cursed": "Blood Cursed",
-      "Circle": "Circle"
+      "Circle": "Circle",
+      "Strike": "Strike"
     }
   },
   "limited_format": {
