--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -412,7 +412,11 @@
     "unexpected_error_with_message": "{{ message }}. Por favor, tente novamente mais tarde.",
     "new_version_available": "Uma nova versão do aplicativo está sendo carregada. Por favor, aguarde alguns segundos ou pressione Ctrl + F5 para atualizar.",
     "new_version_installing": "Boas notícias! Uma atualização está sendo instalada em segundo plano.",
-    "not_required": "Não requerido"
+    "not_required": "Não requerido",
+    "grid": "Grade",
+    "list": "Lista",
+    "cards": "cartas",
+    "apply": "Aplicar"
   },
   "table_seating": {
     "title": "Assentamento de mesa",
@@ -536,7 +540,8 @@
       "martyrdom": "Martyrdom",
       "redemption": "Redemption",
       "vengeance": "Vengeance",
-      "vision": "Vision"
+      "vision": "Vision",
+      "flight": "Flight"
     },
     "clan": {
       "abo": "Abomination",
@@ -602,7 +607,10 @@
       "rush": "rush",
       "stealth": "furtividade",
       "swarm": "swarm",
-      "vote": "voto"
+      "vote": "voto",
+      "mmpa": "mmpa",
+      "v5": "v5",
+      "2player": "2jogadores"
     },
     "taints": {
       "+Intercept": "+Interceptação",
@@ -644,7 +652,8 @@
       "Sterile": "Estéril",
       "Scarce": "Escasso",
       "Blood Cursed": "Maldição de Sangue",
-      "Circle": "Círculo"
+      "Circle": "Círculo",
+      "Strike": "Golpe"
     }
   },
   "limited_format": {
