refactor: improve decks filter usability

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -202,7 +202,7 @@
     "views": "Views",
     "comments": "Comments",
     "players_twd": "Players(TWD)",
-    "clear_filters": "Clear Filters",
+    "reset": "Reset",
     "back_to_top": "Back to top",
     "filters": "Filters",
     "show_filters": "Show filters",
@@ -234,7 +234,7 @@
     "number_of_copies": "number of copies",
     "any": "Any",
     "none": "None",
-    "clear_filters": "Clear Filters",
+    "reset": "Reset",
     "bookmarked": "Bookmarked",
     "tags": "Tags",
     "tags_placeholder": "Add Tags...",
@@ -802,7 +802,7 @@
     "clan": "Clan",
     "discipline": "Discipline",
     "filters": "Filters",
-    "clear_filters": "Clear Filters",
+    "reset": "Reset",
     "active_filters": "Active filters",
     "apply_filters": "Apply Filters",
     "card_type": "Types",
