--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -202,7 +202,7 @@
     "views": "Vistas",
     "comments": "Comentarios",
     "players_twd": "Jugadores (TWD)",
-    "clear_filters": "Borrar filtros",
+    "reset": "Reiniciar",
     "back_to_top": "Volver arriba",
     "filters": "Filtros",
     "show_filters": "Mostrar filtros",
@@ -234,7 +234,7 @@
     "number_of_copies": "número de copias",
     "any": "Cualquier",
     "none": "Ninguno",
-    "clear_filters": "Borrar filtros",
+    "reset": "Reiniciar",
     "bookmarked": "Favoritos",
     "tags": "Etiquetas",
     "tags_placeholder": "Agregar etiquetas...",
@@ -801,7 +801,7 @@
     "clan": "Clan",
     "discipline": "Disciplina",
     "filters": "Filtros",
-    "clear_filters": "Limpiar Filtros",
+    "reset": "Reiniciar",
     "active_filters": "Filtros activos",
     "apply_filters": "Aplicar Filtros",
     "card_type": "Tipos",
