--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -202,7 +202,7 @@
     "views": "Visualizações",
     "comments": "Comentários",
     "players_twd": "Jogadores (TWD)",
-    "clear_filters": "Repor filtros",
+    "reset": "Repor",
     "back_to_top": "Voltar ao topo",
     "filters": "Filtros",
     "show_filters": "Mostrar filtros",
@@ -234,7 +234,7 @@
     "number_of_copies": "número de cópias",
     "any": "Qualquer",
     "none": "Nenhum",
-    "clear_filters": "Repor filtros",
+    "reset": "Repor",
     "bookmarked": "Favoritos",
     "tags": "Etiquetas",
     "tags_placeholder": "Adicionar etiquetas...",
@@ -801,7 +801,7 @@
     "clan": "Clã",
     "discipline": "Disciplina",
     "filters": "Filtros",
-    "clear_filters": "Limpar Filtros",
+    "reset": "Repor",
     "active_filters": "Filtros ativos",
     "apply_filters": "Aplicar Filtros",
     "card_type": "Tipos",
