refactor: add "Cannot Block" translation to English, Spanish, and Portuguese

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -659,7 +659,8 @@
       "Scarce": "Scarce",
       "Blood Cursed": "Blood Cursed",
       "Circle": "Circle",
-      "Strike": "Strike"
+      "Strike": "Strike",
+      "Cannot Block": "Cannot Block"
     }
   },
   "limited_format": {
