--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -152,7 +152,8 @@
     "file": "Archivo",
     "limited_format": "Formato Limitado",
     "deck_copied": "Lista copiada al portapapeles",
-    "collection_tracker": "Rastreador de Colección"
+    "collection_tracker": "Rastreador de Colección",
+    "validation_errors": "{{errors}}"
   },
   "deck_builder_service": {
     "min_crypt_cards": "La cripta debe tener al menos {{ minCrypt }} cartas.",
