--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -152,7 +152,8 @@
     "file": "Arquivo",
     "limited_format": "Formato Limitado",
     "deck_copied": "Baralho copiado para a área de transferência",
-    "collection_tracker": "Rastreador de Coleção"
+    "collection_tracker": "Rastreador de Coleção",
+    "validation_errors": "{{errors}}"
   },
   "deck_builder_service": {
     "min_crypt_cards": "Cripta deve ter pelo menos {{ minCrypt }} cartões",
